fix : overflow error message Borrowbox response : js toggle listCategory ListBook

--- a/MyWeb/Style/AdminPage.css
+++ b/MyWeb/Style/AdminPage.css
@@ -219,11 +219,12 @@
                 width: 20vw;
             }
     .info {
-        padding: 4vw;
+        padding: 2vw;
         grid-column: 1 / span 1;
         grid-row: 2 / span 1;
         font-size:4vw;
     }
+ 
     .preview {
         padding: 2vw;
         grid-column: 1 / span 1;
@@ -242,11 +243,18 @@
        font-size:4vw;
     }
     /*BorBook Page*/
+    #borrowBook{
+        height:100%;
+    }
     #listBorUser {
-        height: 60%;
+        height: 35%;
     }
     #listBorBook {
-        height: 60%;
+        height: 35%;
+    }
+    #borrowMessages {
+        height:15%;
+        overflow:auto;
     }
     /*PREVIEW User*/
     #previewUser {
