--- a/MyWeb/Style/ListBook.css
+++ b/MyWeb/Style/ListBook.css
@@ -185,25 +185,27 @@
         }
 
     #categoryArea {
+        position: relative;
         width: 40%;
         position: fixed;
         left: 0;
         top: 0;
         transform : translateX(-100%);
+        transition-duration:0.75s;
         z-index: 3;
     }
     /*nút để hiện / ẩn danh sách category*/
     #showHideBtn {
         display: block;
         background-color: #3af0b0;
-        position: fixed;
+        position: absolute;
         width: 10vw;
         height: 12vw;
-        font-size:2.2vw;
+        font-size: 2.2vw;
         border-radius: 0 50% 50% 0;
         z-index: 2;
-        top: 40vh;
-        left: 0;
+        top: 50% ;
+        right: -10vw;
         opacity: 0.7;
     }
     #categoryArea #categoryCheckList{
